# Order-Book-Matching

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: e096b9644ab8_create_orders_table.py
api/: dependencies.py  exceptions.py  metadata.py  order_book_router.py  order_request.py  success_response.py
app/: config.py  exception_handlers.py  factory.py  log_config.py  middleware.py  routers.py
application/: order_service.py
domain/: order.py  order_book.py  order_book_response.py  order_mapper.py  order_response.py  order_side.py
infrastructure/: database.py  order_model.py  orders_repository.py
tests/: conftest.py
tests/application/: test_order_service.py
