[tool.poetry]
name = "ordermatching"
version = "0.1.0"
description = ""
authors = ["Antony Evmorfopoulos <antonhs.evm@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.9"
uvicorn = "^0.35.0"
fastapi = "^0.116.2"
dotenv = "^0.9.9"
alembic = "^1.16.5"
pydantic-settings = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"